--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>treinoJob | Turbine a sua entrevista de emprego</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="#"> <!-- Don't know why, but fix the favicon.ico error-->
 </head>
 
 <body>
@@ -19,24 +20,41 @@
 
         <main>
             <h2>Turbine a sua entrevista de emprego respondendo a essas perguntas</h2>
-            <div class="pergunta">
-                <output>
-                    <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis commodi obcaecati, rerum
-                        tempora
-                        at voluptate.
-                        Debitis voluptates sapiente corporis dolore assumenda vel molestiae aperiam. Incidunt quae
-                        inventore
-                        similique sit quas.</h3>
+
+
+            <div class="questionBlock">
+
+                <output class="question">
+                    <h3>Por que você decidiu trabalhar conosco?</h3>
                 </output>
-                <button>
-                    Faça outra pergunta
-                </button>
+                <output class="questionEx">
+                    <h4>Os empregadores acreditam que um ponto crucial paral a admissão é que a pessoa goste do local de
+                        trabalho.
+                    </h4>
+                </output>
+                <div class="btnBlock">
+                    <button class="questionBtn">
+                        Outra pergunta
+                    </button>
+                </div>
+
             </div>
 
+            <div class="infoBlock">
+                <h5>Sobre nós</h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut quo obcaecati debitis sed, recusandae
+                    corporis aliquam ipsam aspernatur commodi voluptatem quod, possimus ex, maxime labore similique?
+                    Maxime totam necessitatibus quibusdam?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut quo obcaecati debitis sed, recusandae
+                    corporis aliquam
+                    ipsam aspernatur commodi voluptatem quod, possimus ex, maxime labore similique? Maxime totam
+                    necessitatibus
+                    quibusdam?</p>
+            </div>
 
         </main>
         <footer>
-            <h4>Footer</h4>
+            <a href="index.html" target="_blank">&copy; 2021 treinoJob | Sobre | Contato</a>
         </footer>
     </div>
 
