--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
 
         <main>
-            <h2>Turbine a sua entrevista de emprego respondendo a essas perguntas</h2>
+            <h2>Pratique e turbine a sua entrevista de emprego com essas perguntas</h2>
 
 
             <div class="questionBlock">
@@ -41,15 +41,16 @@
             </div>
 
             <div class="infoBlock">
-                <h5>Sobre nós</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut quo obcaecati debitis sed, recusandae
-                    corporis aliquam ipsam aspernatur commodi voluptatem quod, possimus ex, maxime labore similique?
-                    Maxime totam necessitatibus quibusdam?</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut quo obcaecati debitis sed, recusandae
-                    corporis aliquam
-                    ipsam aspernatur commodi voluptatem quod, possimus ex, maxime labore similique? Maxime totam
-                    necessitatibus
-                    quibusdam?</p>
+                <h5>Sobre</h5>
+                <p>Ao levantar capital, você deseja melhorar seu argumento de venda ao longo do tempo e praticar para
+                    seu próximo argumento
+                    de venda.</p>
+                <p>Coletamos mais de 200 perguntas que investidores de capital de risco e business angels fazem aos
+                    fundadores.
+                </p>
+                <p>Ao praticar por si mesmo, você pode entender onde você é fraco e precisa melhorar - seja em sua
+                    apresentação ou também
+                    no próprio negócio.</p>
             </div>
 
         </main>
