--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>treinoJob | Turbine a sua entrevista de emprego</title>
+    <title>treineJob | Turbine a sua entrevista de emprego</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="style.css">
+
     <link rel="shortcut icon" href="#"> <!-- Don't know why, but fix the favicon.ico error-->
 </head>
 
@@ -15,11 +17,17 @@
     <div class="container">
 
         <header>
-            <h1>treinoJob</h1>
+            <h1>treineJob</h1>
+            <!-- Add hamburguer to -720 -->
+            <!-- <ul>
+                <li>Tech</li>
+                <li>Blog</li>
+                <li>Contato</li>
+            </ul> -->
         </header>
 
         <main>
-            <h2>Pratique e turbine a sua entrevista de emprego com essas perguntas</h2>
+            <h2>Pratique e turbine a sua entrevista de emprego com as nossas perguntas</h2>
 
 
             <div class="questionBlock">
@@ -34,13 +42,13 @@
                 </output>
                 <div class="btnBlock">
                     <button class="questionBtn">
-                        Outra pergunta
+                        Próxima pergunta
                     </button>
                 </div>
 
             </div>
 
-            <div class="infoBlock">
+            <div class="aboutBlock">
                 <h5>Sobre</h5>
                 <p>Ao levantar capital, você deseja melhorar seu argumento de venda ao longo do tempo e praticar para
                     seu próximo argumento
@@ -52,10 +60,21 @@
                     apresentação ou também
                     no próprio negócio.</p>
             </div>
+            <div class="infoBlock">
+
+                <div class="icon"><i class="fa fa-3x fa-fire"></i></div>
+
+
+
+
+
+
+
+                </div>
 
         </main>
         <footer>
-            <a href="index.html" target="_blank">&copy; 2021 treinoJob | Sobre | Contato</a>
+            <a href="index.html" target="_blank">&copy; 2021 treineJob | Sobre | Contato</a>
         </footer>
     </div>
 
