--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>treineJob | Turbine a sua entrevista de emprego</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+    <title>Treine Job | Turbine a sua entrevista de emprego</title>
     <link rel="stylesheet" href="style.css">
-
-    <link rel="shortcut icon" href="#"> <!-- Don't know why, but fix the favicon.ico error-->
+    <link rel="shortcut icon" href="#">
+    <!-- Don't know why, but fix the favicon.ico error-->
 </head>
 
 <body>
@@ -17,7 +16,7 @@
     <div class="container">
 
         <header>
-            <h1>treineJob</h1>
+            <h1>Treine Job</h1>
             <!-- Add hamburguer to -720 -->
             <!-- <ul>
                 <li>Tech</li>
@@ -29,25 +28,21 @@
         <main>
             <h2>Pratique e turbine a sua entrevista de emprego com as nossas perguntas</h2>
 
-
             <div class="questionBlock">
-
-                <output class="question">
-                    <h3>Por que você decidiu trabalhar conosco?</h3>
+                <output id="question" class="question">
+                    Olá, tudo bem? Vamos começar?
                 </output>
-                <output class="questionEx">
-                    <h4>Os empregadores acreditam que um ponto crucial paral a admissão é que a pessoa goste do local de
-                        trabalho.
-                    </h4>
+                <output id="example" class="example">
+                    Os empregadores acreditam que um ponto crucial paral a admissão é que a pessoa goste do local de
+                    trabalho.
+
                 </output>
                 <div class="btnBlock">
-                    <button class="questionBtn">
+                    <button id="questionBtn" class="questionBtn" onclick="randomQuest();">
                         Próxima pergunta
                     </button>
                 </div>
-
             </div>
-
             <div class="aboutBlock">
                 <h5>Sobre</h5>
                 <p>Ao levantar capital, você deseja melhorar seu argumento de venda ao longo do tempo e praticar para
@@ -61,23 +56,14 @@
                     no próprio negócio.</p>
             </div>
             <div class="infoBlock">
-
-                <div class="icon"><i class="fa fa-3x fa-fire"></i></div>
-
-
-
-
-
-
-
-                </div>
-
+                <!-- fontawesome -->
+            </div>
         </main>
         <footer>
-            <a href="index.html" target="_blank">&copy; 2021 treineJob | Sobre | Contato</a>
+            <a href="index.html" target="_blank">&copy; 2021 Treine Job | Sobre | Contato</a>
         </footer>
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
