minor css changes

--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
 
         <header>
             <h1>Treine Job</h1>
-            <!-- Add hamburguer to -720 -->
-            <!-- <ul>
-                <li>Tech</li>
-                <li>Blog</li>
-                <li>Contato</li>
+
+
+            <!-- <button class="burger" id="burger">
+
+            </button>
+            <ul class="nav-links">
+                <li><a href="#">Tech</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contato</a></li>
             </ul> -->
+
+
         </header>
 
         <main>
