done for the day

--- a/index.html
+++ b/index.html
@@ -19,16 +19,6 @@
             <h1>Treine Job</h1>
 
 
-            <!-- <button class="burger" id="burger">
-
-            </button>
-            <ul class="nav-links">
-                <li><a href="#">Tech</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul> -->
-
-
         </header>
 
         <main>
@@ -62,7 +52,7 @@
                     no próprio negócio.</p>
             </div>
             <div class="infoBlock">
-                <!-- fontawesome -->
+                <i class="fas fa-walking"></i>
             </div>
         </main>
         <footer>
