--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <header>
             <h1>Treine Job</h1>
 
-
         </header>
 
         <main>
             <h2>Pratique e turbine a sua entrevista de emprego com as nossas perguntas</h2>
 
             <div class="questionBlock">
+
                 <output id="question" class="question">
                     Olá, tudo bem? Vamos começar?
                 </output>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="aboutBlock">
-                <h5>Sobre</h5>
+                <h3>Sobre</h3>
                 <p>Ao levantar capital, você deseja melhorar seu argumento de venda ao longo do tempo e praticar para
                     seu próximo argumento
                     de venda.</p>
@@ -52,7 +52,19 @@
                     no próprio negócio.</p>
             </div>
             <div class="infoBlock">
-                <i class="fas fa-walking"></i>
+                <div class="questionsIcon">
+                    <img src="fonts/icons/question.png">
+                    <h4>More then 2000 questions;</h4>
+                </div>
+                <div class="visitsIcon">
+                    <img src="fonts/icons/walking.png">
+                    <h4>More then 2000 daily visitors;</h4>
+                </div>
+                <div class="talkingIcon">
+                    <img src="fonts/icons/binoculars.png">
+                    <h4>More then 500 talking about;</h4>
+
+                </div>
             </div>
         </main>
         <footer>
