--- a/index.html
+++ b/index.html
@@ -12,26 +12,22 @@
 </head>
 
 <body>
-
     <div class="container">
-
         <header>
-            <h1>Treine Job</h1>
-
+            <div class="logo">
+                <img src="fonts/icons/book.png">
+                <h1>Treine Job</h1>
+            </div>
         </header>
-
         <main>
             <h2>Pratique e turbine a sua entrevista de emprego com as nossas perguntas</h2>
-
             <div class="questionBlock">
-
                 <output id="question" class="question">
                     Olá, tudo bem? Vamos começar?
                 </output>
                 <output id="example" class="example">
                     Os empregadores acreditam que um ponto crucial paral a admissão é que a pessoa goste do local de
                     trabalho.
-
                 </output>
                 <div class="btnBlock">
                     <button id="questionBtn" class="questionBtn" onclick="randomQuest();">
@@ -63,7 +59,6 @@
                 <div class="talkingIcon">
                     <img src="fonts/icons/binoculars.png">
                     <h4>More then 500 talking about;</h4>
-
                 </div>
             </div>
         </main>
