--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="fonts/icons/book.png">
-                <h1>Treine Job</h1>
+                <a href="#">
+                    <h1>Treine Job</h1>
+                </a>
             </div>
         </header>
         <main>
-            <h2>Pratique e turbine a sua entrevista de emprego com as nossas perguntas</h2>
+            <h2>Pratique e turbine a sua entrevista de emprego com as perguntas certas</h2>
             <div class="questionBlock">
                 <output id="question" class="question">
                     Olá, tudo bem? Vamos começar?
                 </output>
                 <output id="example" class="example">
-                    Os empregadores acreditam que um ponto crucial paral a admissão é que a pessoa goste do local de
-                    trabalho.
+                    Pense com calma e clareza as suas respostas, e responda quantas perguntas for necessário. Praticando todos os dias, você vai estar muito mais preparado para a sua entrevista.
                 </output>
                 <div class="btnBlock">
                     <button id="questionBtn" class="questionBtn" onclick="randomQuest();">
