--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                     Olá, tudo bem? Vamos começar?
                 </output>
                 <output id="example" class="example">
-                    Pense com calma e clareza as suas respostas, e responda quantas perguntas for necessário. Praticando todos os dias, você vai estar muito mais preparado para a sua entrevista.
+                    Pense com calma e clareza as suas respostas, e responda quantas perguntas for necessário. Praticando
+                    todos os dias, você vai estar muito mais preparado para a sua entrevista.
                 </output>
                 <div class="btnBlock">
                     <button id="questionBtn" class="questionBtn" onclick="randomQuest();">
@@ -63,7 +64,10 @@
             </div>
         </main>
         <footer>
-            <a href="index.html" target="_blank">&copy; 2021 Treine Job | Sobre | Contato</a>
+            <h5>&copy; 2021 <a href="index.html" target="_blank">Treine Job</a> | <a href="index.html"
+                    target="_blank">Tech</a> | <a href="index.html" target="_blank">Blog</a> | <a href="index.html"
+                    target="_blank">Sobre</a> | <a href="index.html" target="_blank">Contato</a></h5>
+
         </footer>
     </div>
     <script src="script.js"></script>
