--- a/index.html
+++ b/index.html
@@ -14,21 +14,18 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">
-                <a href="#">
-                    <h1>Treine Job</h1>
-                </a>
-            </div>
+            <h1>Treine Job</h1>
+            <h6>Blog</h6>
         </header>
         <main>
-            <h2>Pratique e turbine a sua entrevista de emprego com as perguntas certas</h2>
+            <h2>Pratique e turbine sua entrevista de emprego com as perguntas certas</h2>
             <div class="questionBlock">
                 <output id="question" class="question">
                     Olá, tudo bem? Vamos começar?
                 </output>
                 <output id="example" class="example">
-                    Pense com calma e clareza as suas respostas, e responda quantas perguntas for necessário. Praticando
-                    todos os dias, você vai estar muito mais preparado para a sua entrevista.
+                    Para cada pergunta, pense e formule com calma a resposta. Praticando todos os dias, você estará
+                    muito mais preparado e confiante para a sua entrevista.
                 </output>
                 <div class="btnBlock">
                     <button id="questionBtn" class="questionBtn" onclick="randomQuest();">
@@ -51,22 +48,22 @@
             <div class="infoBlock">
                 <div class="questionsIcon">
                     <img src="fonts/icons/question.png">
-                    <h4>More then 2000 questions;</h4>
+                    <h4>Mais de 100 perguntas disponíveis.</h4>
                 </div>
                 <div class="visitsIcon">
                     <img src="fonts/icons/walking.png">
-                    <h4>More then 2000 daily visitors;</h4>
+                    <h4>Mais de 2.000 visitas diárias.</h4>
                 </div>
                 <div class="talkingIcon">
                     <img src="fonts/icons/binoculars.png">
-                    <h4>More then 500 talking about;</h4>
+                    <h4>Mais de 500 pessoas falando sobre.</h4>
                 </div>
             </div>
         </main>
         <footer>
             <h5>&copy; 2021 <a href="index.html" target="_blank">Treine Job</a> | <a href="index.html"
-                    target="_blank">Tech</a> | <a href="index.html" target="_blank">Blog</a> | <a href="index.html"
-                    target="_blank">Sobre</a> | <a href="index.html" target="_blank">Contato</a></h5>
+                    target="_blank">Blog</a> | <a href="index.html" target="_blank">Sobre</a> | <a href="index.html"
+                    target="_blank">Contato</a></h5>
 
         </footer>
     </div>
