--- a/index.html
+++ b/index.html
@@ -35,15 +35,23 @@
             </div>
             <div class="aboutBlock">
                 <h3>Sobre</h3>
-                <p>Ao levantar capital, você deseja melhorar seu argumento de venda ao longo do tempo e praticar para
-                    seu próximo argumento
-                    de venda.</p>
-                <p>Coletamos mais de 200 perguntas que investidores de capital de risco e business angels fazem aos
-                    fundadores.
+                <p>Seja bem-vindo à Treine Job, uma plataforma que tem como objetivo ajudar pessoas que estão em busca
+                    de novas
+                    oportunidades de emprego. Nós acreditamos que a melhor maneira de realizar uma boa entrevista é
+                    adquirindo experiência e
+                    confiança em nossas respostas.
                 </p>
-                <p>Ao praticar por si mesmo, você pode entender onde você é fraco e precisa melhorar - seja em sua
-                    apresentação ou também
-                    no próprio negócio.</p>
+                <p>Por esse motivo, reunimos mais de 100 perguntas que recrutadores normalmente fazem aos candidatos, e
+                    as
+                    disponibilizamos
+                    em forma de cards para que você possa treinar livremente. O treino e a confiança, além de reduzir o
+                    nível de estresse e nervosismo, nos auxilia a identificarmos os nossos
+                    pontos fracos e melhorá-los.</p>
+                <p>Sinta-se à vontade para responder quantas perguntas forem necessárias. O treino diário é um excelente
+                    motivador e
+                    fixador. Para cada pergunta, pense e formule com calma a resposta. Praticando todos os dias, você
+                    estará muito mais
+                    preparado e confiante para a sua entrevista.</p>
             </div>
             <div class="infoBlock">
                 <div class="questionsIcon">
@@ -62,8 +70,7 @@
         </main>
         <footer>
             <h5>&copy; 2021 <a href="index.html" target="_blank">Treine Job</a> | <a href="index.html"
-                    target="_blank">Blog</a> | <a href="index.html" target="_blank">Sobre</a> | <a href="index.html"
-                    target="_blank">Contato</a></h5>
+                    target="_blank">Blog</a> | <a href="index.html" target="_blank">Contato</a></h5>
 
         </footer>
     </div>
