--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description"
+        content="Treine para a sua entrevista de emprego respondendo às mais frequentes perguntas feitas pelos recrutadores aos candidatos. A prática constante de formular respostas diminui o seu nervosismo e aumenta a sua confiança e suas chances de conseguir a vaga almejada." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treine Job | Turbine a sua entrevista de emprego</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="#">
     <!-- Don't know why, but fix the favicon.ico error-->
 </head>
-
 <body>
     <div class="container">
         <header>
-            <h1>Treine Job</h1>
-            <h6>Blog</h6>
+            <h2>Treine Job</h2>
+            <!-- <h6>Blog</h6> -->
         </header>
         <main>
-            <h2>Pratique e turbine sua entrevista de emprego com as perguntas certas</h2>
+            <h1>Pratique e turbine sua entrevista de emprego respondendo às perguntas certas</h1>
             <div class="questionBlock">
                 <output id="question" class="question">
                     Olá, tudo bem? Vamos começar?
                 </output>
                 <output id="example" class="example">
-                    Para cada pergunta, pense e formule com calma a resposta. Praticando todos os dias, você estará
+                    Para cada pergunta, pense e formule com calma a sua resposta. Praticando todos os dias, você estará
                     muito mais preparado e confiante para a sua entrevista.
                 </output>
                 <div class="btnBlock">
@@ -35,43 +36,47 @@
             </div>
             <div class="aboutBlock">
                 <h3>Sobre</h3>
-                <p>Seja bem-vindo à Treine Job, uma plataforma que tem como objetivo ajudar pessoas que estão em busca
+                <p>Seja bem-vindo à <strong>Treine Job</strong>, uma plataforma que tem como objetivo ajudar as pessoas
+                    que estão em busca
                     de novas
                     oportunidades de emprego. Nós acreditamos que a melhor maneira de realizar uma boa entrevista é
                     adquirindo experiência e
                     confiança em nossas respostas.
                 </p>
-                <p>Por esse motivo, reunimos mais de 100 perguntas que recrutadores normalmente fazem aos candidatos, e
+                <p>Por esse motivo, reunimos mais de 100 perguntas que os recrutadores normalmente fazem aos candidatos,
+                    e
                     as
                     disponibilizamos
-                    em forma de cards para que você possa treinar livremente. O treino e a confiança, além de reduzir o
-                    nível de estresse e nervosismo, nos auxilia a identificarmos os nossos
+                    em forma de <i>cards</i> para que você possa treinar livremente. O treino e a confiança, além de
+                    reduzirem o
+                    nível de estresse e nervosismo, nos auxiliam a identificarmos os nossos
                     pontos fracos e melhorá-los.</p>
-                <p>Sinta-se à vontade para responder quantas perguntas forem necessárias. O treino diário é um excelente
+                <p>Sinta-se à vontade para responder quantas perguntas forem necessárias. A prática diária é um
+                    excelente
                     motivador e
-                    fixador. Para cada pergunta, pense e formule com calma a resposta. Praticando todos os dias, você
+                    fixador. Para cada pergunta, pense e formule com calma a sua resposta. Praticando todos os dias,
+                    você
                     estará muito mais
                     preparado e confiante para a sua entrevista.</p>
             </div>
             <div class="infoBlock">
                 <div class="questionsIcon">
-                    <img src="fonts/icons/question.png">
+                    <img src="fonts/icons/question.png" alt="ícone desenho de um balão de perguntas.">
                     <h4>Mais de 100 perguntas disponíveis.</h4>
                 </div>
                 <div class="visitsIcon">
-                    <img src="fonts/icons/walking.png">
+                    <img src="fonts/icons/walking.png" alt="ícone desenho de uma pessoa andando.">
                     <h4>Mais de 2.000 visitas diárias.</h4>
                 </div>
                 <div class="talkingIcon">
-                    <img src="fonts/icons/binoculars.png">
+                    <img src="fonts/icons/binoculars.png" alt="ícone desenho de um binóculos.">
                     <h4>Mais de 500 pessoas falando sobre.</h4>
                 </div>
             </div>
         </main>
         <footer>
-            <h5>&copy; 2021 <a href="index.html" target="_blank">Treine Job</a> | <a href="index.html"
-                    target="_blank">Blog</a> | <a href="index.html" target="_blank">Contato</a></h5>
-
+            <h5>&copy; 2021 <a href="index.html" target="_blank">Treine Job</a></h5>
+            <!-- | <a href="index.html" target="_blank">Blog</a> | <a href="index.html" target="_blank">Contato</a> -->
         </footer>
     </div>
     <script src="script.js"></script>
