--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <link rel="shortcut icon" href="#">
     <!-- Don't know why, but fix the favicon.ico error-->
 </head>
+
 <body>
     <div class="container">
         <header>
-            <h2>Treine Job</h2>
+            <div class="logo">Treine Job</div>
             <!-- <h6>Blog</h6> -->
         </header>
         <main>
