--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treine Job | Turbine a sua entrevista de emprego</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="#">
-    <!-- Don't know why, but fix the favicon.ico error-->
+    <link rel="shortcut icon" type="image/png" href="fonts/icons/logo.png" />
 </head>
 
 <body>
     <div class="container">
         <header>
+            <img class="logo-img" src="fonts/icons/logo.png" alt="Logomarca do site.">
             <div class="logo">Treine Job</div>
         </header>
         <main>
@@ -61,15 +61,15 @@
             </div>
             <div class="infoBlock">
                 <div class="questionsIcon">
-                    <img src="fonts/icons/question.png" alt="ícone desenho de um balão de perguntas.">
+                    <img src="fonts/icons/question.png" alt="Ícone desenho de um balão de perguntas.">
                     <h3>Mais de 100 perguntas disponíveis.</h3>
                 </div>
                 <div class="visitsIcon">
-                    <img src="fonts/icons/walking.png" alt="ícone desenho de uma pessoa andando.">
+                    <img src="fonts/icons/walking.png" alt="Ícone desenho de uma pessoa andando.">
                     <h3>Mais de 2.000 visitas diárias.</h3>
                 </div>
                 <div class="talkingIcon">
-                    <img src="fonts/icons/binoculars.png" alt="ícone desenho de um binóculos.">
+                    <img src="fonts/icons/binoculars.png" alt="Ícone desenho de um binóculos.">
                     <h3>Mais de 500 pessoas falando sobre.</h3>
                 </div>
             </div>
