--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </main>
         <footer>
-            <h4>&copy; 2021 <a href="index.html" target="_blank">Treine Job</a></h4>
+            <h4>&copy; 2021 <a href="index.html" target="_blank">Treine Job | Todos os direitos reservados.</a></h4>
             <!-- | <a href="index.html" target="_blank">Blog</a> | <a href="index.html" target="_blank">Contato</a> -->
         </footer>
     </div>
