--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TreineJob | Turbine a sua entrevista de emprego</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="fonts/icons/logo.png" />
+    <link rel="shortcut icon" type="image/png" href="fonts/icons/logores.png" />
 </head>
 
 <body>
     <div class="container">
         <header>
-            <img class="logo-img" src="fonts/icons/logo.png" alt="Logomarca do site.">
+            <img class="logo-img" src="fonts/icons/logores.png" alt="Logomarca do site.">
             <div class="logo">TreineJob</div>
         </header>
         <main>
