--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header>
-            <img class="logo-img" src="fonts/icons/logores.png" alt="Logomarca do site.">
+            <img class="logo-img" src="fonts/icons/logoresize.png" alt="Logomarca do site.">
             <div class="logo">TreineJob</div>
         </header>
         <main>
