--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TreineJob | Turbine a sua entrevista de emprego</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="fonts/icons/logores.png" />
+    <link rel="shortcut icon" type="image/png" href="fonts/icons/logo.png" />
 </head>
 
 <body>
     <div class="container">
         <header>
-            <img class="logo-img" src="fonts/icons/logoresize.png" alt="Logomarca do site.">
-            <div class="logo">TreineJob</div>
+            <img class="logo-img" src="fonts/icons/logo.png" alt="Logomarca do site.">
+            <a href="#">
+                <div class="logo">TreineJob</div>
+            </a>
         </header>
         <main>
             <h1>Pratique e turbine sua entrevista de emprego respondendo às perguntas certas</h1>
