--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2>Sobre</h2>
                 <p>Seja bem-vindo à <strong>TreineJob</strong>, uma plataforma que tem como objetivo ajudar as pessoas
                     que estão em busca
-                    de novas
+                    de vagas e novas
                     oportunidades de emprego. Nós acreditamos que a melhor maneira de realizar uma boa entrevista é
                     adquirindo experiência e
                     confiança em nossas respostas.
@@ -51,7 +51,7 @@
                     disponibilizamos
                     em forma de <i>cards</i> para que você possa treinar livremente. O treino e a confiança, além de
                     reduzirem o
-                    nível de estresse e nervosismo, nos auxiliam a identificarmos os nossos
+                    nível de estresse, nervosismo, e ansiedade, nos auxiliam a identificarmos os nossos
                     pontos fracos e melhorá-los.</p>
                 <p>Sinta-se à vontade para responder quantas perguntas forem necessárias. A prática diária é um
                     excelente
