--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </main>
         <footer>
-            <h4>&copy; 2021 <a href="index.html" target="_blank">TreineJob | Todos os direitos reservados.</a></h4>
+            <h4><a href="index.html" target="_blank">&copy; 2021 TreineJob | Todos os direitos reservados.</a></h4>
             <!-- | <a href="index.html" target="_blank">Blog</a> | <a href="index.html" target="_blank">Contato</a> -->
         </footer>
     </div>
