--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Treine para a sua entrevista de emprego respondendo às mais frequentes perguntas feitas pelos recrutadores aos candidatos. A prática constante de formular respostas diminui o seu nervosismo e aumenta a sua confiança e suas chances de conseguir a vaga almejada." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TreineJob | Turbine a sua entrevista de emprego</title>
+    <title>Treine Job | Pratique a sua entrevista de emprego</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/png" href="fonts/icons/logo.png" />
 </head>
