sitemap and tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <title>TreineJob | Pratique sua entrevista de emprego</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/png" href="fonts/icons/logo.png" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XY4LHVPME0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-XY4LHVPME0');
+    </script>
 </head>
 
 <body>
